squash assorted bugs (#871)
* update

* add jinja2 requirements

* fix form validation where fields are not submitted

* fix url errors for invalid responses

* fix issues with bad autocomplete requests

* fix audit urls

* fix missing pubmed initials (PMID 31695588)

* fix empty dataframe

* use built-in django exception instead of custom

* raise permission denied if we cannot determine assessment

* use correct jinja2 version

* catch comma ordering - https://github.com/carltongibson/django-filter/pull/1598

* check methods on admin htmx views

* stricter absolute URLs -> trailing slash required and no extensions

* ruff: don't auto-delete unused variables (but fail linting)

* add tests

* skip buggy test

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -10252,3 +10252,8 @@
     due_date: null
     started: null
     completed: null
+- model: reversion.revision
+  pk: 1
+  fields:
+    date_created: 2099-08-01 00:00:00.000000+00:00
+    user_id: 1
