--- a/compose/example.env
+++ b/compose/example.env
@@ -31,6 +31,8 @@ HAWC_SESSION_DURATION=604800
 HAWC_ANYONE_CAN_CREATE_ASSESSMENTS=True
 HAWC_PM_CAN_MAKE_PUBLIC=True
 HAWC_LOAD_TEST_DB=0
+HAWC_FEATURE_FLAGS='{}'
+HAWC_CSRF_TRUSTED_ORIGINS=https://hawc.com
 
 # google tag manager
 GTM_ID=GTM-0000000
