--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -10247,6 +10247,25 @@
     due_date: null
     started: null
     completed: null
+- model: udf.UserDefinedForm
+  pk: 1
+  fields:
+    name: demo form
+    description: a demo form
+    schema: {
+      fields: [
+        {name: "field1", type: "char"},
+        {name: "field2", type: "integer"},
+      ]
+    }
+    creator:
+    - pm@hawcproject.org
+    editors:
+    - - team@hawcproject.org
+    parent: null
+    deprecated: false
+    created: 2023-09-17 04:10:29.880052+00:00
+    last_updated: 2023-09-17 04:15:33.309627+00:00
 - model: reversion.revision
   pk: 1
   fields:
