--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -8377,6 +8377,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: reference, p-trend <0.001
     created: 2022-01-10 21:18:05.442039+00:00
     last_updated: 2022-01-10 21:22:42.511191+00:00
@@ -8406,6 +8407,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.446161+00:00
     last_updated: 2022-01-13 17:31:45.166735+00:00
@@ -8435,6 +8437,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.449764+00:00
     last_updated: 2022-01-13 17:31:45.330298+00:00
@@ -8464,6 +8467,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.453394+00:00
     last_updated: 2022-01-13 17:31:45.373797+00:00
@@ -8491,6 +8495,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: reference, p-trend=0.001
     created: 2022-01-10 21:18:05.457140+00:00
     last_updated: 2022-01-10 21:22:42.527813+00:00
@@ -8518,6 +8523,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.460901+00:00
     last_updated: 2022-01-13 17:31:45.412605+00:00
@@ -8545,6 +8551,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.464462+00:00
     last_updated: 2022-01-13 17:31:45.446933+00:00
@@ -8572,6 +8579,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: Logistic regression
+    adverse_direction: unspecified
     comments: ''
     created: 2022-01-10 21:18:05.468642+00:00
     last_updated: 2022-01-13 17:31:45.496401+00:00
@@ -8599,6 +8607,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: linear regression
+    adverse_direction: unspecified
     comments: test
     created: 2022-01-10 21:44:55.946716+00:00
     last_updated: 2022-01-13 17:32:54.027252+00:00
@@ -8626,6 +8635,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: linear regression
+    adverse_direction: unspecified
     comments: preferred outcome
     created: 2022-01-10 21:44:55.951328+00:00
     last_updated: 2022-01-13 17:32:54.031518+00:00
@@ -8653,6 +8663,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: linear regression
+    adverse_direction: unspecified
     comments: a different endpoint the same PFAS
     created: 2022-01-10 21:44:55.955074+00:00
     last_updated: 2022-01-13 17:32:54.035581+00:00
@@ -8680,6 +8691,7 @@
     confidence: medium
     data_location: Table 3
     statistical_method: linear regression
+    adverse_direction: unspecified
     comments: testing another PFAS
     created: 2022-01-10 21:44:55.958967+00:00
     last_updated: 2022-01-13 17:32:54.039436+00:00
