--- a/compose/app/Dockerfile
+++ b/compose/app/Dockerfile
@@ -18,7 +18,7 @@ COPY ./tests/data/fixtures/db.yaml /app/test-db-fixture.yaml
 # https://pythonspeed.com/articles/system-packages-docker/
 RUN apt-get update && \
     apt-get -y upgrade && \
-    apt-get install -y --no-install-recommends netcat-openbsd git && \
+    apt-get install -y --no-install-recommends netcat-openbsd && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     \
