harden docker images

--- a/compose/nginx/Dockerfile
+++ b/compose/nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:stable-alpine
 
+RUN apk update && \
+    apk upgrade --available && \
+    rm -rf /var/cache/apk/*
+
 COPY ./wait-for.sh /wait-for.sh
