--- a/compose/dc-deploy.yml
+++ b/compose/dc-deploy.yml
@@ -18,6 +18,7 @@ services:
     redis:
         restart: always
         image: hawc_redis
+        command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
         env_file: .env
         healthcheck:
             test: redis-cli -a $$REDIS_PASSWORD ping
