--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ exclude = [
 line-length = 100
 target-version = "py311"
 select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
-ignore = ["E501", "B904", "B007", "S308", "S113", "S314", "S603", "S607", "RUF012"]
+ignore = ["E501", "B904", "B007", "S308", "S113", "S314", "S603", "S607", "RUF012", "RUF015"]
 unfixable = ["F401", "F841"]
 
 [tool.ruff.isort]
