--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -9295,6 +9295,7 @@
     slug: example-heatmap
     assessment: 1
     visual_type: 2
+    evidence_type: 0
     dose_units: null
     prefilters:
       studies:
@@ -9313,6 +9314,7 @@
     slug: example-barchart
     assessment: 1
     visual_type: 3
+    evidence_type: 0
     dose_units: null
     prefilters:
       studies:
@@ -9331,6 +9333,7 @@
     slug: rob-heatmap
     assessment: 2
     visual_type: 2
+    evidence_type: 0
     dose_units: null
     prefilters:
       studies:
@@ -9349,6 +9352,7 @@
     slug: crossview
     assessment: 2
     visual_type: 1
+    evidence_type: 0
     dose_units: 1
     prefilters:
       published_only: true
@@ -9368,6 +9372,7 @@
     slug: rob-barchart
     assessment: 2
     visual_type: 3
+    evidence_type: 0
     dose_units: null
     prefilters:
       studies:
@@ -9386,6 +9391,7 @@
     slug: tagtree
     assessment: 2
     visual_type: 4
+    evidence_type: 3
     dose_units: null
     prefilters: {}
     settings: {"root_node": 11, "required_tags": [], "pruned_tags": [], "hide_empty_tag_nodes": false, "height": 500, "width": 1280, "show_legend": true, "show_counts": true}
@@ -9402,6 +9408,7 @@
     slug: embedded-tableau
     assessment: 2
     visual_type: 5
+    evidence_type: 3
     dose_units: null
     prefilters: {}
     settings: {"external_url": "https://public.tableau.com/views/Iris_15675445278420/Iris-Actual",
@@ -9421,6 +9428,7 @@
     slug: exploratory-heatmap
     assessment: 2
     visual_type: 6
+    evidence_type: 3
     dose_units: null
     prefilters: {}
     settings: {"cell_height": 50, "cell_width": 50, "color_range": ["#ffffff", "#cc4700"], "compress_x": true, "compress_y": true, "data_url": "/ani/api/assessment/2/endpoint-heatmap/", "hawc_interactivity": true, "filter_widgets": [{"column": "species", "delimiter": "", "on_click_event": "---", "header": ""}, {"column": "strain", "delimiter": "", "on_click_event": "---", "header": ""}], "padding": {"top": 30, "left": 30, "bottom": 30, "right": 30}, "show_axis_border": true, "show_grid": true, "show_counts": 1, "show_tooltip": true, "show_totals": true, "show_null": true, "autosize_cells": true, "autorotate_tick_labels": true, "table_fields": [{"column": "study citation", "delimiter": "", "on_click_event": "study", "header": ""}, {"column": "experiment name", "delimiter": "", "on_click_event": "experiment", "header": ""}, {"column": "animal group name", "delimiter": "", "on_click_event": "animal_group", "header": ""}, {"column": "endpoint name", "delimiter": "", "on_click_event": "endpoint_complete", "header": ""}, {"column": "---", "delimiter": "", "on_click_event": "---", "header": ""}], "title": {"text": "", "x": 0, "y": 0, "rotate": 0}, "x_fields": [{"column": "system", "wrap_text": 0, "delimiter": ""}], "x_label": {"text": "", "x": 0, "y": 0, "rotate": 0}, "x_tick_rotate": 0, "y_fields": [{"column": "study citation", "wrap_text": 0, "delimiter": ""}], "y_label": {"text": "", "x": 0, "y": 0, "rotate": 0}, "y_tick_rotate": -90, "x_axis_bottom": false, "filters": [], "filtersLogic":"and"}
@@ -9437,6 +9445,7 @@
     slug: plotly
     assessment: 2
     visual_type: 7
+    evidence_type: 3
     dose_units: null
     prefilters: {}
     settings: {"data": [{"orientation": "h", "x": [1, 2, 3], "xaxis": "x", "y": [0, 1, 2], "yaxis": "y", "type": "bar"}], "layout": {"title":{"text":"test"}}}
@@ -9453,6 +9462,7 @@
     slug: bioassay-aggregation
     assessment: 2
     visual_type: 0
+    evidence_type: 0
     dose_units: 1
     prefilters: {}
     settings: {}
@@ -9470,6 +9480,7 @@
     slug: smart-tags
     assessment: 2
     visual_type: 2
+    evidence_type: 0
     dose_units: null
     prefilters:
       studies:
