make base url configurable via admin setting

--- a/compose/example.env
+++ b/compose/example.env
@@ -33,6 +33,7 @@ HAWC_PM_CAN_MAKE_PUBLIC=True
 HAWC_LOAD_TEST_DB=0
 HAWC_FEATURE_FLAGS='{}'
 HAWC_CSRF_TRUSTED_ORIGINS=https://hawc.com
+WAGTAILADMIN_BASE_URL=https://hawc.com
 
 # google tag manager
 GTM_ID=GTM-0000000
