add new visual - user uploaded image (#941)
* add draft summary visual

* add description to selector

* wip

* fix tests

* relax image boundaries; fix slow test

* fix existing tests

* add integration test

* Review changes

* add evidence type

* unrelated - fix wagtail migration

* fix visual migration order post-main merge

---------

Co-authored-by: munnsmunns <mmunns16@gmail.com>
Co-authored-by: Daniel Rabstejnek <rabstejnek@gmail.com>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -10286,6 +10286,24 @@
     created: 2020-11-26 03:21:03.883675+00:00
     last_updated: 2020-11-26 03:25:56.660522+00:00
     endpoints: []
+- model: summary.visual
+  pk: 12
+  fields:
+    title: image
+    slug: image
+    assessment: 2
+    visual_type: 8
+    evidence_type: 3
+    dose_units: null
+    prefilters: {}
+    settings: {}
+    caption: ''
+    image: "iris.png"
+    published: true
+    sort_order: short_citation
+    created: 2023-11-15 14:25:27.528283+00:00
+    last_updated: 2023-11-15 14:25:27.528283+00:00
+    endpoints: []
 - model: summary.datapivot
   pk: 1
   fields:
