updates for release

--- a/compose/postgres/Dockerfile
+++ b/compose/postgres/Dockerfile
@@ -1,5 +1,9 @@
 FROM postgres:12-alpine
 
+RUN apk update && \
+    apk upgrade --available && \
+    rm -rf /var/cache/apk/*
+
 # add backup scripts
 ADD backup.sh /usr/local/bin/backup
 ADD restore.sh /usr/local/bin/restore
