--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -10298,7 +10298,7 @@
     prefilters: {}
     settings: {}
     caption: ''
-    image: "iris.png"
+    image: "summary/visual/images/iris.png"
     published: true
     sort_order: short_citation
     created: 2023-11-15 14:25:27.528283+00:00
