update how entrypoint is handled

--- a/compose/postgres/Dockerfile
+++ b/compose/postgres/Dockerfile
@@ -8,4 +8,8 @@ RUN apk update && \
 ADD backup.sh /usr/local/bin/backup
 ADD restore.sh /usr/local/bin/restore
 ADD list-backups.sh /usr/local/bin/list-backups
-ADD init.sh /docker-entrypoint-initdb.d/init-user-db.sh
+
+# add custom entrypoint
+ADD docker-entrypoint.sh /docker-entrypoint-2.sh
+
+ENTRYPOINT ["docker-entrypoint-2.sh"]
