update dev dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,11 +31,11 @@
         "@babel/runtime": "^7.22.6",
         "@uswds/compile": "^1.0.0",
         "@uswds/uswds": "^3.5.0",
-        "assert": "^2.0.0",
+        "assert": "~2.1.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.3.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "~6.8.1",
+        "css-loader": "~6.9.1",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-babel": "^5.3.1",
@@ -46,12 +46,12 @@
         "mocha": "^10.2.0",
         "mochapack": "^2.1.4",
         "prettier": "^1.19.1",
-        "rimraf": "^5.0.1",
-        "style-loader": "^3.3.3",
-        "webpack": "^5.88.1",
+        "rimraf": "^5.0.5",
+        "style-loader": "^3.3.4",
+        "webpack": "^5.89.0",
         "webpack-bundle-tracker": "^2.0.1",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-middleware": "^6.1.1"
+        "webpack-dev-middleware": "^7.0.0"
     },
     "dependencies": {
         "clipboard": "~2.0.11",
