--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,26 +19,24 @@
         "url": "https://github.com/shapiromatron/hawc.git"
     },
     "devDependencies": {
-        "@babel/cli": "^7.22.6",
-        "@babel/core": "^7.22.8",
-        "@babel/generator": "^7.22.7",
-        "@babel/parser": "^7.22.7",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.22.7",
-        "@babel/polyfill": "^7.12.1",
-        "@babel/preset-env": "^7.22.7",
-        "@babel/preset-react": "^7.22.5",
-        "@babel/runtime": "^7.22.6",
+        "@babel/cli": "^7.23.4",
+        "@babel/core": "^7.23.7",
+        "@babel/eslint-parser": "^7.23.3",
+        "@babel/generator": "^7.23.6",
+        "@babel/parser": "^7.23.6",
+        "@babel/plugin-proposal-decorators": "^7.23.7",
+        "@babel/plugin-transform-class-properties": "^7.23.3",
+        "@babel/preset-env": "^7.23.8",
+        "@babel/preset-react": "^7.23.3",
+        "@babel/runtime": "^7.23.8",
         "@uswds/compile": "^1.0.0",
         "@uswds/uswds": "^3.5.0",
         "assert": "~2.1.0",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.3.0",
+        "babel-loader": "^9.1.3",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "~6.9.1",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-simple-import-sort": "^8.0.0",
