--- a/pre-commit-config.yaml
+++ b/pre-commit-config.yaml
@@ -4,3 +4,11 @@ repos:
     hooks:
       - id: djhtml
       entry: djhtml --tabwidth 2
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.3
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
